Execute fine on JDK8 and JDK11