@@ -30,6 +30,7 @@
     <packaging>jar</packaging>
     <properties>
         <debug />
+        <add.opens>--add-opens=jdk.javadoc/com.sun.tools.javadoc.main=ALL-UNNAMED</add.opens>
     </properties>
     <build>
         <plugins>
@@ -65,12 +66,15 @@
 -hiddingannotation java.lang.Deprecated 
 -hiddingannotation org.apidesign.javadoc.testing.HiddenSnippets.Invisible
                     </additionalparam>
+                    <additionalJOptions>
+                        <opt>-J${add.opens}</opt>
+                    </additionalJOptions>
                 </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
-                <version>2.6</version>
+                <version>3.1.0</version>
                 <configuration>
                     <excludes>
                         <exclude>**/*Snippet*.class</exclude>
@@ -87,4 +91,15 @@
             <type>jar</type>
         </dependency>
     </dependencies>
+    <profiles>
+        <profile>
+            <id>java-8</id>
+            <activation>
+                <jdk>1.8</jdk>
+            </activation>
+            <properties>
+                <add.opens>-Dignore=</add.opens>
+            </properties>
+        </profile>
+    </profiles>
 </project>
